--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,9 @@ colored = "1.8.0"
 rdkafka = "0.14.1"
 math="0.0.2"
 rand="0.7.0"
+streaming-harness = { version = "^0.1", features = ["hdrhist-support"] }
+clap="2.33.0"
+fnv="1.0.6"
+hdrhist = "0.5.0"
+abomonation="0.7.3"
 
